<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flann</name>
  <version>1.0.0</version>
  <description>FLANN - Fast Library for Approximate Nearest Neighbors</description>

<maintainer email="mariusm@cs.ubc.ca">Marius Muja</maintainer>
<maintainer email="lowe@cs.ubc.ca">David G. Lowe</maintainer>
<maintainer email="jwrae@google.com">Jack Rae</maintainer>

  <!-- liorf_localization_yjz_lucky_boy -->
  <license>BSD License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>